# elpis_v2

./: .coveragerc  .gitignore  README.md  docker-compose.yml  environment_setup.yml  examples.sql  nautilus_fixed_catalog.py  nautilus_playground.py  playground.py  playground_data_download.py  prometheus.yml  pyproject.toml  requirements.txt  smth.py
.github/: docs.yml
.github/workflows/: docs.yml  test.yml
db/init/: 001-init.sql  002-schema.sql  003-stored_procedures.sql
elpis_documentation/: _config.yml  _toc.yml  intro.md
elpis_documentation/_build/.doctrees/: environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
elpis_documentation/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
elpis_documentation/_build/jupyter_execute/: markdown-notebooks.ipynb
elpis_documentation/chapters/: setting_conda.md
scripts/: purge_db.sh  setup_docker.sh  setup_env.sh
src/elpis/: __init__.py  cli.py  config.py  strategies.py
src/elpis/download/: data_ingest.py  instrument_to_uic.py  instrument_utils.py
src/elpis_nautilus/: cli.py
src/elpis_nautilus/data_downloaders/: downloader_main.py
src/elpis_nautilus/utils/: config.py
src/tests/cli/: test_cli.py
src/tests/unit/: test_config.py  test_downloader.py
tests/cli/: test_cli.py
